# grader

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  tests.sh
.github/workflows/: build-multi-platform.yml  cmake-multi-platform.yml  test.yml
debug/: CMakeLists.txt
debug/src/: main.cpp
demo/: CMakeLists.txt  main.cpp  test.cpp
include/ukicomputers/: grader.hpp
lib/: CMakeLists.txt
lib/cmake/: graderConfig.cmake.in
lib/include/ukicomputers/: grader.hpp
lib/src/: grader.cpp
src/: grader.cpp  main.cpp
